k8s/secrets/vault/overlays/prod/httproute-setup-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-vault-setup
spec:
  hostnames:
    - vault-setup.example.invalid
  parentRefs:
    - name: homelab-gw
      namespace: networking
      sectionName: https
