k8s/secrets/vault/overlays/prod/httproute-ui-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-vault-ui
spec:
  hostnames:
    - vault.example.invalid
  parentRefs:
    - name: homelab-gw
      namespace: prod-networking
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-shared-outpost
          namespace: prod-auth
          port: 9000
